Kelsey Development Sandbox/src/objects/DS_SDQ_PSI_CDI_F__c.object
<CustomObject>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_F__c</referenceTo>
        <relationshipLabel>DS SDQ PSI CDI F</relationshipLabel>
        <relationshipName>DS_SDQ_PSI_CDI_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS SDQ PSI CDI F</relationshipLabel>
        <relationshipName>DS_SDQ_PSI_CDI_F</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FBEHNULLP__c</fullName>
        <description>Number of blank questions for behavioral section (parent)</description>
        <label>FBEHNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBEHNULLS__c</fullName>
        <description>Number of blank questions for behavioral section (self)</description>
        <label>FBEHNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDOAPSI__c</fullName>
        <label>FDOAPSI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOASDOP__c</fullName>
        <description>1. Parent 11-17: Date of Administration</description>
        <label>FDOASDOP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOASDOS__c</fullName>
        <description>1. Self 11-17: Date of Administration</description>
        <label>FDOASDOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOASDYP__c</fullName>
        <description>1. Parent 4-10: Date of Administration</description>
        <label>FDOASDYP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <formula>Background_ID__r.FDOV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEMONULLP__c</fullName>
        <description>Counts how many questions were left blank in emotional section, aids in data validation (parent)</description>
        <label>FEMONULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FEMONULLS__c</fullName>
        <description>Counts how many questions were left blank in emotional section, aids in data validation (self)</description>
        <label>FEMONULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FFORM__c</fullName>
        <label>FFORM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHYPNULLP__c</fullName>
        <description>Counts how many questions were left blank in hyperactivity section, aids in data validation (parent)</description>
        <label>FHYPNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FHYPNULLS__c</fullName>
        <description>Counts how many questions were left blank in hyperactivity section, aids in data validation (self)</description>
        <label>FHYPNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FKHBNULLP__c</fullName>
        <description>Counts how many questions were left blank in kind and helpful behaviors section, aids in data validation (parent)</description>
        <label>FKHBNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FKHBNULLS__c</fullName>
        <description>Counts how many questions were left blank in kind and helpful behaviors section, aids in data validation (self)</description>
        <label>FKHBNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMETSDOP__c</fullName>
        <description>2. Parent 11-17: How was this form administered?</description>
        <label>FMETSDOP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMETSDOS__c</fullName>
        <description>2. Self 11-17: How was this form administered?</description>
        <label>FMETSDOS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMETSDYP__c</fullName>
        <description>2. Parent 4-10: How was this form administered?</description>
        <label>FMETSDYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOTCNULLP__c</fullName>
        <description>Counts how many questions were left blank in other children section, aids in data validation (parent)</description>
        <label>FOTCNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOTCNULLS__c</fullName>
        <description>Counts how many questions were left blank in other children section, aids in data validation (self)</description>
        <label>FOTCNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDC2__c</fullName>
        <description>Difficult Child (DC)</description>
        <label>FPSIDC2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDC_PTLE2__c</fullName>
        <description>Difficult Child (DC) T</description>
        <label>FPSIDC_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDC_PTLE__c</fullName>
        <description>Difficult Child (DC) T</description>
        <label>FPSIDC_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDC__c</fullName>
        <description>Difficult Child (DC)</description>
        <label>FPSIDC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDR2__c</fullName>
        <description>Defensive Responding</description>
        <label>FPSIDR2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDR_PTLE2__c</fullName>
        <description>Defensive Responding T</description>
        <label>FPSIDR_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDR_PTLE__c</fullName>
        <description>Defensive Responding T</description>
        <label>FPSIDR_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIDR__c</fullName>
        <description>Defensive Responding</description>
        <label>FPSIDR</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPCDI2__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI)</description>
        <label>FPSIPCDI2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPCDI_PTLE2__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI) T</description>
        <label>FPSIPCDI_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPCDI_PTLE__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI) T</description>
        <label>FPSIPCDI_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPCDI__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI)</description>
        <label>FPSIPCDI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPD2__c</fullName>
        <description>Parental Distress (PD)</description>
        <label>FPSIPD2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPD_PTLE2__c</fullName>
        <description>Parental Distress (PD) T</description>
        <label>FPSIPD_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPD_PTLE__c</fullName>
        <description>Parental Distress (PD) T</description>
        <label>FPSIPD_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSIPD__c</fullName>
        <description>Parental Distress (PD)</description>
        <label>FPSIPD</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSITS2__c</fullName>
        <description>Total Stress</description>
        <label>FPSITS2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSITS_PTLE2__c</fullName>
        <description>Total Stress T</description>
        <label>FPSITS_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSITS_PTLE__c</fullName>
        <description>Total Stress T</description>
        <label>FPSITS_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FPSITS__c</fullName>
        <description>Total Stress</description>
        <label>FPSITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPAFRA__c</fullName>
        <description>24. Parent: Many fears, easily scared</description>
        <label>FSDPAFRA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPATTE__c</fullName>
        <description>25. Parent: Good attention span, sees chores or homework through to the end</description>
        <label>FSDPATTE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPBEH__c</fullName>
        <description>Behavioral Difficulties, parent</description>
        <label>FSDPBEH</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPBTYP__c</fullName>
        <description>Significance behavior, parent (Normal, Borderline, Abnormal)</description>
        <label>FSDPBTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPBULL__c</fullName>
        <description>19. Parent: Picked on or bullied by other youth</description>
        <label>FSDPBULL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPCARI__c</fullName>
        <description>9. Parent: Helpful if someone is hurt, upset or feeling ill</description>
        <label>FSDPCARI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPCLIN__c</fullName>
        <description>16. Parent: Nervous in new situations, easily loses confidence</description>
        <label>FSDPCLIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPCOMM__c</fullName>
        <description>26. Parent: Do you have any other comments or concerns?</description>
        <label>FSDPCOMM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSDPCONS__c</fullName>
        <description>1. Parent: Considerate of other people&apos;s feelings</description>
        <label>FSDPCONS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPDCL__c</fullName>
        <description>Impact of any Difficulties on the Child&apos;s Life, parent</description>
        <label>FSDPDCL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPDIST__c</fullName>
        <description>15. Parent: Easily distracted, concentration wanders</description>
        <label>FSDPDIST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPEBCD__c</fullName>
        <description>29. Parent: Overall, do you think that your child has difficulties in one or more of the following areas: emotions, concentration, behavior or being able to get on with other people?</description>
        <label>FSDPEBCD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPEBDD__c</fullName>
        <description>30. Parent: Over the last month, have you had difficulties in one or more of the following areas: emotions, concentration, behavior or being able to get on with other people?</description>
        <label>FSDPEBDD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPEMO__c</fullName>
        <description>Emotional Distress, parent</description>
        <label>FSDPEMO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPETYP__c</fullName>
        <description>Significance Emotional, parent</description>
        <label>FSDPETYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPFAM__c</fullName>
        <description>37. Parent: Do the difficulties put a burden on you or the family as a whole?</description>
        <label>FSDPFAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPFIDG__c</fullName>
        <description>10. Parent: Constantly fidgeting or squirming</description>
        <label>FSDPFIDG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPFIGH__c</fullName>
        <description>12. Parent: Often fights with other youth or bullies them</description>
        <label>FSDPFIGH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPFRIE__c</fullName>
        <description>11. Parent: Has at least one good friend</description>
        <label>FSDPFRIE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPHELPFL__c</fullName>
        <description>28. Parent: Has coming to the clinic been helpful in other ways, e.g. providing information or making the problems more bearable?</description>
        <label>FSDPHELPFL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPHELP__c</fullName>
        <description>20. Parent: Often offers to help others (parents, teachers, children)</description>
        <label>FSDPHELP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPHTYP__c</fullName>
        <description>Significance hyperactive, parent</description>
        <label>FSDPHTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPHYP__c</fullName>
        <description>Hyperactivity and Attentional Difficulties, parent</description>
        <label>FSDPHYP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPIMPC__c</fullName>
        <description>35. Parent: Do the difficulties interfere with your child&apos;s everyday life in the following areas? CLASSROOM LEARNING</description>
        <label>FSDPIMPC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPIMPF__c</fullName>
        <description>34. Parent: Do the difficulties interfere with your child&apos;s everyday life in the following areas? FRIENDSHIPS</description>
        <label>FSDPIMPF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPIMPH__c</fullName>
        <description>33. Parent: Do the difficulties interfere with your child&apos;s everyday life in the following areas? HOME LIFE</description>
        <label>FSDPIMPH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPIMPL__c</fullName>
        <description>36. Parent: Do the difficulties interfere with your child&apos;s everyday life in the following areas? LEISURE ACTIVITIES</description>
        <label>FSDPIMPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPINFOR__c</fullName>
        <description>38. Parent: Mother/Father/Other</description>
        <label>FSDPINFOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPINFSP__c</fullName>
        <description>39. Parent: Other (please specify:)</description>
        <label>FSDPINFSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSDPITYP__c</fullName>
        <description>Significance Impact, parent</description>
        <label>FSDPITYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPKHB__c</fullName>
        <description>Kind and Helpful Behavior, parent</description>
        <label>FSDPKHB</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPKIND__c</fullName>
        <description>17. Parent: Kind to younger children</description>
        <label>FSDPKIND</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPKTYP__c</fullName>
        <description>Significance kind, parent</description>
        <label>FSDPKTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPLIES__c</fullName>
        <description>18. Parent: Often lies or cheats</description>
        <label>FSDPLIES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPLONE__c</fullName>
        <description>6. Parent: Would rather be alone than with other youth</description>
        <label>FSDPLONE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPOBEY__c</fullName>
        <description>7. Parent: Generally well behaved, usually does what adults request</description>
        <label>FSDPOBEY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPOLDB__c</fullName>
        <description>23. Parent: Gets along better with adults than with other youth</description>
        <label>FSDPOLDB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPOTC__c</fullName>
        <description>Difficulties with Other Children, parent</description>
        <label>FSDPOTC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSDPOTYP__c</fullName>
        <description>Significance other children, parent</description>
        <label>FSDPOTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPPOPU__c</fullName>
        <description>14. Parent: Generally liked by other youth</description>
        <label>FSDPPOPU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDPPROB__c</fullName>
        <description>27. Parent: Since coming to the clinic, are your problems:</description>
        <label>FSDPPROB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>